@@ -4,7 +4,7 @@ dnl
 dnl Copyright 1998 - 2021 Double Precision, Inc.  See COPYING for
 dnl distribution information.
 
-AC_INIT(courier-imap, 5.1.3, [courier-users@lists.sourceforge.net])
+AC_INIT(courier-imap, 5.1.3.20210615, [courier-users@lists.sourceforge.net])
 
 >confdefs.h  # Kill PACKAGE_ macros
 
