@@ -1,3 +1,7 @@
+2021-06-15  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* pop3login: use unbuffered reads, handle our own buffering.
+
 2021-05-21  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* Minor code tweaks, make it compleable with -Wall -Werror.
